# ralf

./: LICENSE  README.md  pyproject.toml  requirements.txt
demos/: classifier_demo.py  dispatcher_demo.py  simple_chat.py
demos/ralf_data/: models.yml  prompts.yml
docs/: conf.py  index.rst  modules.rst  ralf.rst
docs/api/: ralf.rst
docs/introduction/: quickstart.rst
docs/tutorials/: actions.rst  classification.ipynb  executing_actions.ipynb
ralf/: __init__.py  classifier.py  config.yml  dispatcher.py  utils.py
