[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.7.1,<4"]

[project]
name = "ralf"
description = "A lightweight library to support the development of applications using LLMs."
readme = "README.md"
# license = "MIT"
dependencies = [
    "openai",
    # "plotly",
    # "transformers"
]
dynamic = [
    "version",
]
requires-python = ">=3.9"
authors = [
  { name = "Samuel Barham", email = "ralf@jhuapl.edu" },
  { name = "Arun Reddy", email = "ralf@jhuapl.edu" },
  { name = "Edward Staley", email = "ralf@jhuapl.edu" },

]
maintainers = [
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]
